# dockerlens

./: .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Untitled  azure-pipelines.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.cursor/: README.md
.cursor/commands/: commit.md  delete-feature-branch.md  oversee.md  pr.md
.cursor/prompts/: code-review-validation-and-fix.md  documentation-drift-audit-prompt.md  general-code-audit-review-prompt.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Docs/Archtecture/: ARCHITECTURE.md
Docs/Design/: DESIGN-SYSTEM.md  SCREENS.md
Docs/Requirements/: TRD.md
Docs/best-practices/: GENERAL.md  GITHUB-ACTIONS.md  REACT-TYPESCRIPT.md  README.md  RUST.md
db/: 003_functions.sql  004_seed_dev.sql  README.md
docs/Design/: MOCKUP.md
docs/Requirements/: PRD.md  TRD.md
docs/best-practices/: GENERAL.md  GITHUB-ACTIONS.md  REACT-TYPESCRIPT.md  README.md  SUPABASE.md  TAURI.md
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/docker/: client.rs  containers.rs
src-tauri/src/system/: socket.rs
src-tauri/tests/: README.md
src-tauri/tests/integration/: commands.rs  docker_client.rs  main.rs  socket_detection.rs
src-tauri/tests/unit/: client.rs  containers.rs  main.rs  socket.rs
(+35 files in other folders)
