[package]
name = "dockerlens"
version = "0.1.0"
description = "A native Linux Docker Desktop GUI"
authors = ["cm-collins"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "dockerlens_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ─── Tauri core ──────────────────────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon"] }

# ─── Tauri plugins ───────────────────────────────────────────────────────────
tauri-plugin-opener = "2"

# ─── Docker API ──────────────────────────────────────────────────────────────
bollard = "0.20"

# ─── Async runtime ───────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }

# ─── Serialisation ───────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# ─── Error handling ──────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "2"

# ─── Logging ─────────────────────────────────────────────────────────────────
log        = "0.4"
env_logger = "0.11"

# ─── System utilities ────────────────────────────────────────────────────────
dirs  = "6"
which = "8"

[profile.release]
overflow-checks = true
lto             = true
codegen-units   = 1
strip           = true
panic           = "abort"

[profile.dev]
incremental = true
